@@ -204,6 +204,9 @@ Zope Changes
 
     Bugs Fixed
 
+      - DateTime conversion of datetime objects with non-pytz tzinfo. 
+        Timezones() returns a copy of the timezone list (allows tests to run).
+
       - LP #253362: better dealing with malformed HTTP_ACCEPT_CHARSET headers
 
       - Launchpad #246748: added 'immediate' option to sendXXX() methods
